--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <h1>Headers and Footers</h1>
     <h3>Seatwork 3</h3>
     <div class="buttons">
-        <a class="button button1" href="./pages/page1/assets/index.html"><h2>Headers</h2></a>
+        <a class="button button1" href="./pages/page1/index.html"><h2>Headers</h2></a>
         <a class="button button2" href="./pages/page2/index.html"><h2>Footers</h2></a>
     </div>
-
-
 </body>
 </html>
