--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -47,8 +47,26 @@
         </div>
 
         <div class="footer2">
-            <div class="header-right">
-
+            <img class="krusty" src="/assets/img/krusty-logo.jpg">
+            <div class="contact2">
+                <p class="number2">
+                    <b>CONTACT</b><br>
+                    <br>831 Bottom Feeder Ln.
+                    <br>Bikini Bottom, Pacific Ocean
+                    <br>Phone: 555-501-1999
+                    <br>Email: krustykrab@seamail.coral
+                </p>
+            </div>
+            <img class="window" src="/assets/img/window.png">
+            <div class="about2">
+                <p class="krab">
+                    <b>WHAT IS KRUSTY KRAB?</b><br>
+                    <br>Krusty Krab is a fast food<br>
+                    restaurant located in Bikini<br> Bottom,
+                    founded and owned by<br> Eugene H. Krabs.
+                    It is also the<br> most popular and best
+                     known<br> restaurant in Bikini Bottom.
+                </p>
             </div>
         </div>
 
