--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -71,14 +71,46 @@
         </div>
 
         <div class="footer3">
-            <div class="header-right">
-
+            <div class="about3">
+                <a class="top">About Us</a>
+                <a class="top">Products</a>
+                <a class="top">Awards</a>
+                <a class="top">Help</a>
+                <br>
+                <br>
+                <hr>
+                <br>
+                <div class="bottom">
+                    <p class="face">
+                        Facebook is a social networking site 
+                        that makes it easy for you to connect 
+                        and share with family and friends 
+                        online. <br>The purpose of Facebook is to 
+                        help friends and family connect with 
+                        each other. And the best way to 
+                        connect with your <br>friends and family 
+                        is by updating them about your life 
+                        with status updates. To share a 
+                        Facebook status, go to the text <br>box at 
+                        the top of your news feed page or on 
+                        your profile page.
+                    </p>
+                </div>
             </div>
         </div>
 
         <div class="footer4">
-            <div class="header-right">
-
+            <div class="about4">
+                <img class="shark" src="/assets/img/shark eating.png">
+                <div class="contact4">
+                    <p class="number4">
+                        <b>CONTACT</b><br>
+                        <br>Boulevard Del Perro, Del Perro Plaza,
+                        <br>Del Perro, Los Santos
+                        <br>Phone: 555-501-1999
+                        <br>Email: UpNTownBurger@info.com
+                    </p>
+                </div>
             </div>
         </div>
 
