--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -115,40 +115,155 @@
         </div>
 
         <div class="footer5">
-            <div class="header-right">
-
+            <div class="about5">
+                <p class="valo">
+                    <b>ABOUT</b><br><br>
+                    VALORANT is a team-based, multiplayer, 
+                    first-person action game developed and 
+                    published by Riot Games. <br>VALORANT is 
+                    rated T for Teen.
+                </p>
+                <p class="rant">
+                    <b>GAMEPLAY</b><br><br>
+                    Valorant is a tactical shooting game 
+                    involving two teams with 5 players in 
+                    each team. Every player can sign in 
+                    and play <br>remotely from anywhere in the 
+                    world. Every game has 25 rounds and 
+                    the team that wins 13 of them first wins 
+                    the game. Players <br>can choose their 
+                    in-game characters called agents at the 
+                    start of the game. Players can buy 
+                    abilities and weapons at the start of the 
+                    game.
+                </p>
             </div>
         </div>
     </div>
     <h1>ANIMATED</h1>
     <div class="animated">
-        <div class="footer1">
-            <div class="header-right">
-
+        <div class="footer6">
+            <img class="logo6" src="/assets/img/freddy_fazbear.png">
+            <div class="about6">
+                <p class="freddy">
+                    <b>ABOUT THE COMPANY</b><br>
+                    <br>Freddy Fazbear's Pizza is a
+                    pizzeria set up by Fazbear
+                    Entertainment<br> open from 1988
+                    to 1993. Freddy Fazbear's Pizza
+                    at night is a dimly<br> light
+                    restaurant. The place is covered
+                    in posters with the characters
+                    <br>saying various things such as
+                    "Play, Party, Eat", in addition,
+                    the place<br> is covered in pizza
+                    decorations and slices of pizza
+                    and black and<br> white tiled room
+                     and other various decorations
+                     scattered very poorly<br> around the
+                     establishment.
+                </p>
+            </div>
+            <div class="contact6">
+                <p class="number6">
+                    <b>CONTACT</b><br>
+                    <br><i><u>1-888-FAZ-FAZBEAR</u></i>
+                </p>
+                <img class="faz" src="/assets/img/Fazbear_Entertainment.jpg">
             </div>
         </div>
 
-        <div class="footer2">
-            <div class="header-right">
-
+        <div class="footer7">
+            <img class="krusty" src="/assets/img/krusty-logo.jpg">
+            <div class="contact7">
+                <p class="number7">
+                    <b>CONTACT</b><br>
+                    <br>831 Bottom Feeder Ln.
+                    <br>Bikini Bottom, Pacific Ocean
+                    <br>Phone: 555-501-1999
+                    <br>Email: krustykrab@seamail.coral
+                </p>
+            </div>
+            <img class="window" src="/assets/img/window.png">
+            <div class="about7">
+                <p class="krab">
+                    <b>WHAT IS KRUSTY KRAB?</b><br>
+                    <br>Krusty Krab is a fast food<br>
+                    restaurant located in Bikini<br> Bottom,
+                    founded and owned by<br> Eugene H. Krabs.
+                    It is also the<br> most popular and best
+                     known<br> restaurant in Bikini Bottom.
+                </p>
             </div>
         </div>
 
-        <div class="footer3">
-            <div class="header-right">
-
+        <div class="footer8">
+            <div class="about8">
+                <a class="top">About Us</a>
+                <a class="top">Products</a>
+                <a class="top">Awards</a>
+                <a class="top">Help</a>
+                <br>
+                <br>
+                <hr>
+                <br>
+                <div class="bottom">
+                    <p class="face">
+                        Facebook is a social networking site 
+                        that makes it easy for you to connect 
+                        and share with family and friends 
+                        online. <br>The purpose of Facebook is to 
+                        help friends and family connect with 
+                        each other. And the best way to 
+                        connect with your <br>friends and family 
+                        is by updating them about your life 
+                        with status updates. To share a 
+                        Facebook status, go to the text <br>box at 
+                        the top of your news feed page or on 
+                        your profile page.
+                    </p>
+                </div>
             </div>
         </div>
 
-        <div class="footer4">
-            <div class="header-right">
-
+        <div class="footer9">
+            <div class="about9">
+                <img class="shark" src="/assets/img/shark eating.png">
+                <div class="contact9">
+                    <p class="number9">
+                        <b>CONTACT</b><br>
+                        <br>Boulevard Del Perro, Del Perro Plaza,
+                        <br>Del Perro, Los Santos
+                        <br>Phone: 555-501-1999
+                        <br>Email: UpNTownBurger@info.com
+                    </p>
+                </div>
             </div>
         </div>
 
-        <div class="footer5">
-            <div class="header-right">
-
+        <div class="footer10">
+            <div class="about10">
+                <p class="valo">
+                    <b>ABOUT</b><br><br>
+                    VALORANT is a team-based, multiplayer, 
+                    first-person action game developed and 
+                    published by Riot Games. <br>VALORANT is 
+                    rated T for Teen.
+                </p>
+                <p class="rant">
+                    <b>GAMEPLAY</b><br><br>
+                    Valorant is a tactical shooting game 
+                    involving two teams with 5 players in 
+                    each team. Every player can sign in 
+                    and play <br>remotely from anywhere in the 
+                    world. Every game has 25 rounds and 
+                    the team that wins 13 of them first wins 
+                    the game. Players <br>can choose their 
+                    in-game characters called agents at the 
+                    start of the game. Players can buy 
+                    abilities and weapons at the start of the 
+                    game.
+                </p>
             </div>
         </div>
     </div>
