--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -9,14 +9,14 @@
 <body>
 
     <div class="home">
-        <a href="/index.html">
-            <img class="homeimg" src="/assets/img/home.png">
+        <a href="./index.html">
+            <img class="homeimg" src="./assets/img/home.png">
         </a>
     </div>
     <h1>FOOTERS</h1>
     <div class="footers">
         <div class="footer1">
-            <img class="logo1" src="/assets/img/freddy_fazbear.png">
+            <img class="logo1" src="./assets/img/freddy_fazbear.png">
             <div class="about1">
                 <p class="freddy">
                     <b>ABOUT THE COMPANY</b><br>
@@ -42,12 +42,12 @@
                     <b>CONTACT</b><br>
                     <br><i><u>1-888-FAZ-FAZBEAR</u></i>
                 </p>
-                <img class="faz" src="/assets/img/Fazbear_Entertainment.jpg">
+                <img class="faz" src="./assets/img/Fazbear_Entertainment.jpg">
             </div>
         </div>
 
         <div class="footer2">
-            <img class="krusty" src="/assets/img/krusty-logo.jpg">
+            <img class="krusty" src="./assets/img/krusty-logo.jpg">
             <div class="contact2">
                 <p class="number2">
                     <b>CONTACT</b><br>
@@ -57,7 +57,7 @@
                     <br>Email: krustykrab@seamail.coral
                 </p>
             </div>
-            <img class="window" src="/assets/img/window.png">
+            <img class="window" src="./assets/img/window.png">
             <div class="about2">
                 <p class="krab">
                     <b>WHAT IS KRUSTY KRAB?</b><br>
@@ -82,17 +82,17 @@
                 <br>
                 <div class="bottom">
                     <p class="face">
-                        Facebook is a social networking site 
-                        that makes it easy for you to connect 
-                        and share with family and friends 
-                        online. <br>The purpose of Facebook is to 
-                        help friends and family connect with 
-                        each other. And the best way to 
-                        connect with your <br>friends and family 
-                        is by updating them about your life 
-                        with status updates. To share a 
-                        Facebook status, go to the text <br>box at 
-                        the top of your news feed page or on 
+                        Facebook is a social networking site
+                        that makes it easy for you to connect
+                        and share with family and friends
+                        online. <br>The purpose of Facebook is to
+                        help friends and family connect with
+                        each other. And the best way to
+                        connect with your <br>friends and family
+                        is by updating them about your life
+                        with status updates. To share a
+                        Facebook status, go to the text <br>box at
+                        the top of your news feed page or on
                         your profile page.
                     </p>
                 </div>
@@ -101,7 +101,7 @@
 
         <div class="footer4">
             <div class="about4">
-                <img class="shark" src="/assets/img/shark eating.png">
+                <img class="shark" src="./assets/img/shark eating.png">
                 <div class="contact4">
                     <p class="number4">
                         <b>CONTACT</b><br>
@@ -118,23 +118,23 @@
             <div class="about5">
                 <p class="valo">
                     <b>ABOUT</b><br><br>
-                    VALORANT is a team-based, multiplayer, 
-                    first-person action game developed and 
-                    published by Riot Games. <br>VALORANT is 
+                    VALORANT is a team-based, multiplayer,
+                    first-person action game developed and
+                    published by Riot Games. <br>VALORANT is
                     rated T for Teen.
                 </p>
                 <p class="rant">
                     <b>GAMEPLAY</b><br><br>
-                    Valorant is a tactical shooting game 
-                    involving two teams with 5 players in 
-                    each team. Every player can sign in 
-                    and play <br>remotely from anywhere in the 
-                    world. Every game has 25 rounds and 
-                    the team that wins 13 of them first wins 
-                    the game. Players <br>can choose their 
-                    in-game characters called agents at the 
-                    start of the game. Players can buy 
-                    abilities and weapons at the start of the 
+                    Valorant is a tactical shooting game
+                    involving two teams with 5 players in
+                    each team. Every player can sign in
+                    and play <br>remotely from anywhere in the
+                    world. Every game has 25 rounds and
+                    the team that wins 13 of them first wins
+                    the game. Players <br>can choose their
+                    in-game characters called agents at the
+                    start of the game. Players can buy
+                    abilities and weapons at the start of the
                     game.
                 </p>
             </div>
@@ -143,7 +143,7 @@
     <h1>ANIMATED</h1>
     <div class="animated">
         <div class="footer6">
-            <img class="logo6" src="/assets/img/freddy_fazbear.png">
+            <img class="logo6" src="./assets/img/freddy_fazbear.png">
             <div class="about6">
                 <p class="freddy">
                     <b>ABOUT THE COMPANY</b><br>
@@ -169,12 +169,12 @@
                     <b>CONTACT</b><br>
                     <br><i><u>1-888-FAZ-FAZBEAR</u></i>
                 </p>
-                <img class="faz" src="/assets/img/Fazbear_Entertainment.jpg">
+                <img class="faz" src="./assets/img/Fazbear_Entertainment.jpg">
             </div>
         </div>
 
         <div class="footer7">
-            <img class="krusty" src="/assets/img/krusty-logo.jpg">
+            <img class="krusty" src="./assets/img/krusty-logo.jpg">
             <div class="contact7">
                 <p class="number7">
                     <b>CONTACT</b><br>
@@ -184,7 +184,7 @@
                     <br>Email: krustykrab@seamail.coral
                 </p>
             </div>
-            <img class="window" src="/assets/img/window.png">
+            <img class="window" src="./assets/img/window.png">
             <div class="about7">
                 <p class="krab">
                     <b>WHAT IS KRUSTY KRAB?</b><br>
@@ -209,17 +209,17 @@
                 <br>
                 <div class="bottom">
                     <p class="face">
-                        Facebook is a social networking site 
-                        that makes it easy for you to connect 
-                        and share with family and friends 
-                        online. <br>The purpose of Facebook is to 
-                        help friends and family connect with 
-                        each other. And the best way to 
-                        connect with your <br>friends and family 
-                        is by updating them about your life 
-                        with status updates. To share a 
-                        Facebook status, go to the text <br>box at 
-                        the top of your news feed page or on 
+                        Facebook is a social networking site
+                        that makes it easy for you to connect
+                        and share with family and friends
+                        online. <br>The purpose of Facebook is to
+                        help friends and family connect with
+                        each other. And the best way to
+                        connect with your <br>friends and family
+                        is by updating them about your life
+                        with status updates. To share a
+                        Facebook status, go to the text <br>box at
+                        the top of your news feed page or on
                         your profile page.
                     </p>
                 </div>
@@ -228,7 +228,7 @@
 
         <div class="footer9">
             <div class="about9">
-                <img class="shark" src="/assets/img/shark eating.png">
+                <img class="shark" src="./assets/img/shark eating.png">
                 <div class="contact9">
                     <p class="number9">
                         <b>CONTACT</b><br>
@@ -245,23 +245,23 @@
             <div class="about10">
                 <p class="valo">
                     <b>ABOUT</b><br><br>
-                    VALORANT is a team-based, multiplayer, 
-                    first-person action game developed and 
-                    published by Riot Games. <br>VALORANT is 
+                    VALORANT is a team-based, multiplayer,
+                    first-person action game developed and
+                    published by Riot Games. <br>VALORANT is
                     rated T for Teen.
                 </p>
                 <p class="rant">
                     <b>GAMEPLAY</b><br><br>
-                    Valorant is a tactical shooting game 
-                    involving two teams with 5 players in 
-                    each team. Every player can sign in 
-                    and play <br>remotely from anywhere in the 
-                    world. Every game has 25 rounds and 
-                    the team that wins 13 of them first wins 
-                    the game. Players <br>can choose their 
-                    in-game characters called agents at the 
-                    start of the game. Players can buy 
-                    abilities and weapons at the start of the 
+                    Valorant is a tactical shooting game
+                    involving two teams with 5 players in
+                    each team. Every player can sign in
+                    and play <br>remotely from anywhere in the
+                    world. Every game has 25 rounds and
+                    the team that wins 13 of them first wins
+                    the game. Players <br>can choose their
+                    in-game characters called agents at the
+                    start of the game. Players can buy
+                    abilities and weapons at the start of the
                     game.
                 </p>
             </div>
