--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -9,15 +9,15 @@
 <body>
 
     <div class="home">
-        <a href="/index.html">
-            <img class="homeimg" src="/assets/img/home.png">
+        <a href="./index.html">
+            <img class="homeimg" src="./assets/img/home.png">
         </a>
     </div>
     <h1>HEADERS</h1>
     <h2>Choose your hometown!</h2>
     <div class="header">
         <div class="kanto">
-            <img class="logo1" src="/assets/img/kanto region.png">
+            <img class="logo1" src="./assets/img/kanto region.png">
             <div class="header-right">
                 <a class="search1">Search</a>
                 <a class="nav1">ABOUT</a>
@@ -47,7 +47,7 @@
         </div>
 
         <div class="sinnoh">
-            <img src="/assets/img/sinnoh.png">
+            <img src="./assets/img/sinnoh.png">
             <a class="sin"><b>SINNOH REGION</b></a>
             <div class="header-right">
                 <a class="nav4">ABOUT</a>
@@ -58,10 +58,10 @@
 
         <div class="unova">
             <a class="uno"><b>UNOVA</b></a>
-            <img class="va" src="/assets/img/unova.png">
+            <img class="va" src="./assets/img/unova.png">
             <div class="header-right">
                 <a class="search5">Search</a>
-                <img class="search" src="/assets/img/search-icon.png">
+                <img class="search" src="./assets/img/search-icon.png">
                 <a class="nav5">ABOUT</a>
                 <a class="nav5">GALLERY</a>
                 <a class="nav5">CONTACT</a>
@@ -73,7 +73,7 @@
     <h2>Choose your pokemon!</h2>
     <div class="header">
         <div class="magikarp">
-            <img class="logo" src="/assets/img/magikarp.png">
+            <img class="logo" src="./assets/img/magikarp.png">
             <div class="header-right">
                 <a class="nav6">About</a>
                 <a class="nav6">Gallery</a>
@@ -82,14 +82,14 @@
         </div>
 
         <div class="charmander">
-            <img class="fire" src="/assets/img/fire.gif">
+            <img class="fire" src="./assets/img/fire.gif">
             <b class="char">Charmander</b>
             <div class="header-right">
                 <div class="man">
-                    <img class ="man1" src="/assets/img/charmander.png">
-                    <img class ="man1" src="/assets/img/charmander.png">
-                    <img class ="man1" src="/assets/img/charmander.png">
-                    <img class ="man1" src="/assets/img/charmander.png">
+                    <img class ="man1" src="./assets/img/charmander.png">
+                    <img class ="man1" src="./assets/img/charmander.png">
+                    <img class ="man1" src="./assets/img/charmander.png">
+                    <img class ="man1" src="./assets/img/charmander.png">
                 </div>
 
                 <a class="nav7">Ability</a>
@@ -101,17 +101,17 @@
 
         <div class="pikachu">
             <b class="chu">Pikachu</b>
-            <img class="pika" src="/assets/img/pikachu.png">
+            <img class="pika" src="./assets/img/pikachu.png">
             <div class="header-right">
                 <a class="search8">Search</a>
-                <img class="search" src="/assets/img/search-icon.png">
+                <img class="search" src="./assets/img/search-icon.png">
                 <a class="nav8">Login</a>
                 <a class="nav8">Register</a>
             </div>
         </div>
 
         <div class="metapod">
-            <img class="logo" src="/assets/img/metapod.png">
+            <img class="logo" src="./assets/img/metapod.png">
             <b class="pod">METAPOD</b>
             <div class="header-right">
                 <a class="nav9">About</a>
@@ -122,7 +122,7 @@
 
         <div class="poliwhirl">
             <b class="poli">POLIWHIRL</b>
-            <img class="logo" src="/assets/img/poliwhirl.png">
+            <img class="logo" src="./assets/img/poliwhirl.png">
             <div class="header-right">
                 <a class="nav10">Login</a>
                 <a class="nav10">Register</a>
