--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Page Title</title>
+    <title>Footer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -9,14 +9,14 @@
 <body>
 
     <div class="home">
-        <a href="index.html">
+        <a href="./index.html">
             <img class="homeimg" src="./assets/img/home.png">
         </a>
     </div>
     <h1>FOOTERS</h1>
     <div class="footers">
         <div class="footer1">
-            <img class="logo1" src="/assets/img/freddy_fazbear.png">
+            <img class="logo1" src="./assets/img/freddy_fazbear.png">
             <div class="about1">
                 <p class="freddy">
                     <b>ABOUT THE COMPANY</b><br>
