--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Page Title</title>
+    <title>Header</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -9,7 +9,7 @@
 <body>
 
     <div class="home">
-        <a href="index.html">
+        <a href="./index.html">
             <img class="homeimg" src="./assets/img/home.png">
         </a>
     </div>
@@ -17,7 +17,7 @@
     <h2>Choose your hometown!</h2>
     <div class="header">
         <div class="kanto">
-            <img class="logo1" src="./assets/img/kanto region.png" alt="kanto region">
+            <img class="logo1" src="./assets/img/kanto region.png">
             <div class="header-right">
                 <a class="search1">Search</a>
                 <a class="nav1">ABOUT</a>
