--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -10,7 +10,7 @@
 
     <div class="home">
         <a href="/index.html">
-            <img class="homeimg" src="./assets/img/home.png">
+            Back
         </a>
     </div>
     <h1>HEADERS</h1>
