--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -9,14 +9,14 @@
 <body>
 
     <div class="home">
-        <a href="/index.html">
+        <a href="../index.html">
             Back
         </a>
     </div>
     <h1>FOOTERS</h1>
     <div class="footers">
         <div class="footer1">
-            <img class="logo1" src="./assets/img/freddy_fazbear.png">
+            <img class="logo1" src="../assets/img/freddy_fazbear.png">
             <div class="about1">
                 <p class="freddy">
                     <b>ABOUT THE COMPANY</b><br>
@@ -42,12 +42,12 @@
                     <b>CONTACT</b><br>
                     <br><i><u>1-888-FAZ-FAZBEAR</u></i>
                 </p>
-                <img class="faz" src="./assets/img/Fazbear_Entertainment.jpg">
+                <img class="faz" src="../assets/img/Fazbear_Entertainment.jpg">
             </div>
         </div>
 
         <div class="footer2">
-            <img class="krusty" src="./assets/img/krusty-logo.jpg">
+            <img class="krusty" src="../assets/img/krusty-logo.jpg">
             <div class="contact2">
                 <p class="number2">
                     <b>CONTACT</b><br>
