--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="home">
-        <a href="../index.html">
+        <a href="./index.html">
             Back
         </a>
     </div>
