--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -16,7 +16,7 @@
     <h1>FOOTERS</h1>
     <div class="footers">
         <div class="footer1">
-            <img class="logo1" src="../assets/img/freddy_fazbear.png">
+            <img class="logo1" src="./assets/img/freddy_fazbear.png">
             <div class="about1">
                 <p class="freddy">
                     <b>ABOUT THE COMPANY</b><br>
