--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -16,7 +16,7 @@
     <h1>FOOTERS</h1>
     <div class="footers">
         <div class="footer1">
-            <img class="logo1" src="./assets/img/freddy_fazbear.png">
+            <img class="logo1" src="../assets/img/freddy_fazbear.png">
             <div class="about1">
                 <p class="freddy">
                     <b>ABOUT THE COMPANY</b><br>
@@ -57,7 +57,7 @@
                     <br>Email: krustykrab@seamail.coral
                 </p>
             </div>
-            <img class="window" src="./assets/img/window.png">
+            <img class="window" src="../assets/img/window.png">
             <div class="about2">
                 <p class="krab">
                     <b>WHAT IS KRUSTY KRAB?</b><br>
@@ -101,7 +101,7 @@
 
         <div class="footer4">
             <div class="about4">
-                <img class="shark" src="./assets/img/shark eating.png">
+                <img class="shark" src="../assets/img/shark eating.png">
                 <div class="contact4">
                     <p class="number4">
                         <b>CONTACT</b><br>
@@ -143,7 +143,7 @@
     <h1>ANIMATED</h1>
     <div class="animated">
         <div class="footer6">
-            <img class="logo6" src="./assets/img/freddy_fazbear.png">
+            <img class="logo6" src="../assets/img/freddy_fazbear.png">
             <div class="about6">
                 <p class="freddy">
                     <b>ABOUT THE COMPANY</b><br>
@@ -169,12 +169,12 @@
                     <b>CONTACT</b><br>
                     <br><i><u>1-888-FAZ-FAZBEAR</u></i>
                 </p>
-                <img class="faz" src="./assets/img/Fazbear_Entertainment.jpg">
+                <img class="faz" src="../assets/img/Fazbear_Entertainment.jpg">
             </div>
         </div>
 
         <div class="footer7">
-            <img class="krusty" src="./assets/img/krusty-logo.jpg">
+            <img class="krusty" src="../assets/img/krusty-logo.jpg">
             <div class="contact7">
                 <p class="number7">
                     <b>CONTACT</b><br>
@@ -184,7 +184,7 @@
                     <br>Email: krustykrab@seamail.coral
                 </p>
             </div>
-            <img class="window" src="./assets/img/window.png">
+            <img class="window" src="../assets/img/window.png">
             <div class="about7">
                 <p class="krab">
                     <b>WHAT IS KRUSTY KRAB?</b><br>
@@ -228,7 +228,7 @@
 
         <div class="footer9">
             <div class="about9">
-                <img class="shark" src="./assets/img/shark eating.png">
+                <img class="shark" src="../assets/img/shark eating.png">
                 <div class="contact9">
                     <p class="number9">
                         <b>CONTACT</b><br>
