--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -17,7 +17,7 @@
     <h2>Choose your hometown!</h2>
     <div class="header">
         <div class="kanto">
-            <img class="logo1" src="/assets/img/kanto region.png">
+            <img class="logo1" src="./assets/img/kanto region.png">
             <div class="header-right">
                 <a class="search1">Search</a>
                 <a class="nav1">ABOUT</a>
