--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="home">
-        <a href="../../index.html">
+        <a href="../../../WD-Seatwork-3/index.html">
             Back
         </a>
     </div>
